# dreamcycle

./: .gitignore  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  styles.css
docs/: EXTRACTION_PLAN.md  IMPLEMENTATION_REVIEW.md  LICENSE_DECISION.md  PLAN_REVIEW.md  VENDOR_SDK.md  VENDOR_SDK_IMPLEMENTATION_REVIEW.md  VENDOR_SDK_PLAN.md  VENDOR_SDK_PLAN_REVIEW.md
docs/report/: DreamCycle_Technical_Thesis.md
examples/: basic_cycle.py  five_minute_memory.py  memory_only.py  openai_proxy.env.example  vendor_sdk.py
scripts/: dashboard_server.py  hermes_sidecar_smoke.py  install.sh  install_dreamcycle_hermes_plugin.sh  package_installers.py  release_dreamcycle_for_hermes.sh  verify_distribution.py
skills/dreamcycle-hermes-memory/: SKILL.md
src/dreamcycle/: __init__.py  adapters.py  cycle.py  dataset.py  errors.py  evaluation.py  events.py  types.py
src/dreamcycle/hermes/: __init__.py  cli.py  commands.py  plugin.py
src/dreamcycle/memory/: __init__.py  base.py  embeddings.py  postgres.py  schema.py
src/dreamcycle/sdk/: __init__.py  client.py  models.py
src/dreamcycle/server/: __init__.py  app.py  auth.py  cli.py  jobs.py  memory.py  models.py  proxy.py  runtime.py  service.py
src/dreamcycle/training/: __init__.py  base.py  transformers.py
tests/: test_adapters.py  test_cycle.py  test_dataset.py  test_hermes_commands.py  test_imports.py  test_jobs.py  test_memory_schema.py  test_postgres_integration.py  test_project_metadata.py  test_proxy.py  test_runtime_config.py  test_sdk.py  test_server_api.py  test_training_optional.py
